--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ css/style.hold.less
 assets/cradleToGraveCS5.ai
 assets/cradleToGrave.png
 assets/cradleToGrave2.ai
+assets/cradleToGrave.ai
+assets/cradleToGrave.pdf
+assets/cradleToGrave.png
 assets/moneyStackBlue.ai
 assets/moneyBlue.ai
 bower_components/parallax.js
